k8s/applications/automation/frigate/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate-external
  namespace: frigate
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "frigate.smadja.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-proxy-outpost
          namespace: auth
          port: 9000

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate-internal
  namespace: frigate
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "frigate.smadja.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frigate
          port: 5000
